kubernetes/infrastructure/kubevirt-manager/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: kubevirt-manager-buffering
spec:
  buffering:
    maxRequestBodyBytes: 0
    maxResponseBodyBytes: 0
